# bitbake

./: .gitignore  pyproject.toml  setup.cfg
contrib/pypi/: BUILD.md  noxfile.py  package-bitbake-setup.py  pyproject.toml
contrib/pypi/tests/: test_install.py
lib/bb/tests/: setup.py
lib/bitbake_setup/: __main__.py
