[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitbake"
version = "2.16.0"
description = "BitBake build tool"
requires-python = ">=3.9"
license = "GPL-2.0-only"
readme = "README"
authors = [
    { name = "Chris Larson" },
    { name = "Phil Blundell" },
    { name = "Richard Purdie" },
]

# TODO: Convert bin/ scripts to proper entry points by extracting
# their logic into library modules with main() functions.
# [project.scripts]
# bitbake = "bb.main:bitbake_main_cli"

[tool.setuptools]
script-files = [
    "bin/bitbake",
    "bin/bitbake-config-build",
    "bin/bitbake-diffsigs",
    "bin/bitbake-dumpsig",
    "bin/bitbake-getvar",
    "bin/bitbake-hashclient",
    "bin/bitbake-hashserv",
    "bin/bitbake-layers",
    "bin/bitbake-prserv",
    "bin/bitbake-selftest",
    "bin/bitbake-server",
    "bin/bitbake-setup",
    "bin/bitbake-worker",
    "bin/git-make-shallow",
    "bin/toaster",
    "bin/toaster-eventreplay",
]
package-dir = {"" = "lib"}
py-modules = ["codegen", "pyinotify"]

[tool.setuptools.packages.find]
where = ["lib"]

[tool.setuptools.package-data]
"toaster.toastergui" = [
    "templates/**/*.html",
    "static/**/*",
]
