[metadata]
name = bitbake-setup
version = 2.16.0a1
author = OpenEmbedded BitBake Developers
author_email = bitbake-devel@lists.openembedded.org
description = bitbake-setup
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openembedded/bitbake.git
license = "GPL-2.0-only and MIT"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = lib
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.6
py_modules = codegen

install_requires =
    ; List any non-standard dependencies BitBake needs
    ; BitBake is mostly self-contained, but check its documentation

[options.packages.find]
where = lib
include =
    bb*
    bs4*
    ply
    bitbake_setup

[options.entry_points]
console_scripts =
    bitbake-setup = bitbake_setup.__main__:main
